# extendvcc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: smoke-testing.md  testing-policy.md
docs/plans/: 2026-06-14-gold-standard-oss.md  2026-06-26-parent-card-billing-address-design.md
docs/superpowers/plans/: 2026-06-14-smoke-harness.md  2026-06-26-parent-card-billing-address.md
docs/superpowers/specs/: 2026-06-14-smoke-harness-design.md
scripts/: release.py  smoke_test.py
src/extendvcc/: __init__.py  _exit_codes.py  _jsonl.py  _paths.py  auth.py  cards.py  cli.py  client.py  imap_otp.py  ledger.py  models.py
tests/: test_auth.py  test_cards.py  test_cli.py  test_client.py  test_imap_otp.py  test_ledger.py  test_models.py  test_smoke.py
tests/fixtures/: op_credit_card_template.json
