[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extendvcc"
version = "0.1.0"
description = "Unofficial CLI and Python client for the Extend virtual card API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "impit>=0.12.0",
    "filelock>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.scripts]
extendvcc = "extendvcc.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
