[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extendvcc-cli"
version = "0.1.2"
description = "Unofficial CLI and Python client for the Extend virtual card API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "impit>=0.12.0",
    "filelock>=3.0",
]
authors = [{name = "4LAU"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
keywords = ["extend", "virtual-card", "fintech", "cli"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.scripts]
extendvcc = "extendvcc.cli:main"

[project.urls]
Homepage = "https://github.com/4LAU/extendvcc"
Repository = "https://github.com/4LAU/extendvcc"
Issues = "https://github.com/4LAU/extendvcc/issues"
Changelog = "https://github.com/4LAU/extendvcc/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# The PyPI distribution is "extendvcc-cli" but the import package is "extendvcc";
# tell hatchling explicitly since the names no longer match.
packages = ["src/extendvcc"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
